--- a/web/index.html
+++ b/web/index.html
@@ -39,9 +39,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 		<div class="col-sm-5 col-md-offset-2  header-login">
 					<ul >
-						<li><a href="login.html">Login</a></li>
-						<li><a href="register.html">Register</a></li>
-						<li><a href="checkout.html">Checkout</a></li>
+						<li class="test_class_group_0"><a href="login.html">Login</a></li>
+						<li class="test_class_group_0"><a href="register.html">Register</a></li>
+						<li class="test_class_group_0"><a href="checkout.html">Checkout</a></li>
 					</ul>
 				</div>
 				
@@ -79,7 +79,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
    <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
         <ul class="nav navbar-nav nav_1">
-            <li><a class="color" href="index.html">Home</a></li>
+            <li class="test_class_group_1"><a class="color" href="index.html">Home</a></li>
             
     		<li class="dropdown mega-dropdown active">
 			    <a class="color1" href="#" class="dropdown-toggle" data-toggle="dropdown">Women<span class="caret"></span></a>				
@@ -210,10 +210,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>                  
 				</div>				
 			</li>
-			<li><a class="color3" href="product.html">Sale</a></li>
-			<li><a class="color4" href="404.html">About</a></li>
-            <li><a class="color5" href="typo.html">Short Codes</a></li>
-            <li ><a class="color6" href="contact.html">Contact</a></li>
+			<li class="test_class_group_1"><a class="color3" href="product.html">Sale</a></li>
+			<li class="test_class_group_1"><a class="color4" href="404.html">About</a></li>
+            <li class="test_class_group_1"><a class="color5" href="typo.html">Short Codes</a></li>
+            <li class="test_class_group_1"><a class="color6" href="contact.html">Contact</a></li>
         </ul>
      </div><!-- /.navbar-collapse -->
 
@@ -221,7 +221,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-sm-2 search-right">
 				<ul class="heart">
-				<li>
+				<li class="test_class_group_0">
 				<a href="wishlist.html" >
 				<span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
 				</a></li>
@@ -276,13 +276,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="container">
 				<div class="content-top">
 					<div class="col-md-6 col-md">
-						<div class="col-1">
-						 <a href="/catalog/hot.html" class="b-link-stroke b-animate-go  thickbox">
+						<div class="test_class_group_3" class="col-1">
+						 <a  href="/catalog/hot.html" class="b-link-stroke b-animate-go  thickbox">
 		   <img src="images/pi.jpg" class="img-responsive" alt=""/><div class="b-wrapper1 long-img"><p class="b-animate b-from-right    b-delay03 ">Lorem ipsum</p><label class="b-animate b-from-right    b-delay03 "></label><h3 class="b-animate b-from-left    b-delay03 ">Trendy</h3></div></a>
 
 							<!---<a href="single.html"><img src="images/pi.jpg" class="img-responsive" alt=""></a>-->
 						</div>
-						<div class="col-2">
+						<div class="col-2 test_class_group_2">
 							<span>Hot Deal</span>
 							<h2><a href="catalog/hot.html">Luxurious &amp; Trendy</a></h2>
 							<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years</p>
@@ -290,7 +290,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</div>
 					<div class="col-md-6 col-md1">
-						<div class="col-3">
+						<div class="col-3 test_class_group_2">
 							<a href="catalog/man.html"><img src="images/pi1.jpg" class="img-responsive" alt="">
 							<div class="col-pic">
 								<p>Lorem Ipsum</p>
@@ -298,7 +298,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<h5>For Men</h5>
 							</div></a>
 						</div>
-						<div class="col-3">
+						<div class="col-3 test_class_group_2">
 							<a href="catalog/kids.html"><img src="images/pi2.jpg" class="img-responsive" alt="">
 							<div class="col-pic">
 								<p>Lorem Ipsum</p>
@@ -306,7 +306,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<h5>For Kids</h5>
 							</div></a>
 						</div>
-						<div class="col-3">
+						<div class="col-3 test_class_group_2">
 							<a href="catalog/woman.html"><img src="images/pi3.jpg" class="img-responsive" alt="">
 							<div class="col-pic">
 								<p>Lorem Ipsum</p>
@@ -618,15 +618,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="col-md-3 footer-middle-in">
 						<h6>Information</h6>
 						<ul class=" in">
-							<li><a href="404.html">About</a></li>
-							<li><a href="contact.html">Contact Us</a></li>
+							<li class="test_class_group_0"><a href="404.html">About</a></li>
+							<li class="test_class_group_0"><a href="contact.html">Contact Us</a></li>
 							<li><a href="#">Returns</a></li>
-							<li><a href="contact.html">Site Map</a></li>
+							<li class="test_class_group_0"><a href="contact.html">Site Map</a></li>
 						</ul>
 						<ul class="in in1">
 							<li><a href="#">Order History</a></li>
-							<li><a href="wishlist.html">Wish List</a></li>
-							<li><a href="login.html">Login</a></li>
+							<li class="test_class_group_0"><a href="wishlist.html">Wish List</a></li>
+							<li class="test_class_group_0"><a href="login.html">Login</a></li>
 						</ul>
 						<div class="clearfix"></div>
 					</div>
