Updated DOM for tests

--- a/web/index.html
+++ b/web/index.html
@@ -320,9 +320,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<!--products-->
 			<div class="content-mid">
 				<h3>Trending Items</h3>
-				<label class="line"></label>
+				<label class="line"></label> 
 				<div class="mid-popular">
-					<div class="col-md-3 item-grid simpleCart_shelfItem">
+					<div class="col-md-3 item-grid simpleCart_shelfItem test_class_group_5 test_class_group_6">
 					<div class=" mid-pop">
 					<div class="pro-img">
 						<img src="images/pc.jpg" class="img-responsive" alt="">
@@ -354,7 +354,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</div>
 					</div>
-					<div class="col-md-3 item-grid simpleCart_shelfItem">
+					<div class="col-md-3 item-grid simpleCart_shelfItem test_class_group_4 test_class_group_5 test_class_group_6">
 					<div class=" mid-pop">
 					<div class="pro-img">
 						<img src="images/pc1.jpg" class="img-responsive" alt="">
@@ -386,7 +386,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</div>
 					</div>
-					<div class="col-md-3 item-grid simpleCart_shelfItem">
+					<div class="col-md-3 item-grid simpleCart_shelfItem test_class_group_4 test_class_group_5 test_class_group_6">
 					<div class=" mid-pop">
 					<div class="pro-img">
 						<img src="images/pc2.jpg" class="img-responsive" alt="">
@@ -418,7 +418,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</div>
 					</div>
-					<div class="col-md-3 item-grid simpleCart_shelfItem">
+					<div class="col-md-3 item-grid simpleCart_shelfItem test_class_group_4 test_class_group_5 test_class_group_6">
 					<div class=" mid-pop">
 					<div class="pro-img">
 						<img src="images/pc3.jpg" class="img-responsive" alt="">
@@ -453,7 +453,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="clearfix"></div>
 				</div>
 								<div class="mid-popular">
-					<div class="col-md-3 item-grid simpleCart_shelfItem">
+					<div class="col-md-3 item-grid simpleCart_shelfItem test_class_group_4 test_class_group_5 test_class_group_6">
 					<div class=" mid-pop">
 					<div class="pro-img">
 						<img src="images/pc4.jpg" class="img-responsive" alt="">
@@ -485,7 +485,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</div>
 					</div>
-					<div class="col-md-3 item-grid simpleCart_shelfItem">
+					<div class="col-md-3 item-grid simpleCart_shelfItem test_class_group_4 test_class_group_5 test_class_group_6">
 					<div class=" mid-pop">
 					<div class="pro-img">
 						<img src="images/pc5.jpg" class="img-responsive" alt="">
@@ -517,7 +517,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</div>
 					</div>
-					<div class="col-md-3 item-grid simpleCart_shelfItem">
+					<div class="col-md-3 item-grid simpleCart_shelfItem test_class_group_4 test_class_group_5 test_class_group_6">
 					<div class=" mid-pop">
 					<div class="pro-img">
 						<img src="images/pc6.jpg" class="img-responsive" alt="">
@@ -549,7 +549,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</div>
 					</div>
-					<div class="col-md-3 item-grid simpleCart_shelfItem">
+					<div class="col-md-3 item-grid simpleCart_shelfItem test_class_group_4 test_class_group_5 test_class_group_6">
 					<div class=" mid-pop">
 					<div class="pro-img">
 						<img src="images/pc7.jpg" class="img-responsive" alt="">
